src/app/modules/channels/v2/social-links/social-links.component.scss
m-channel__socialLinks {
  display: inline-flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-start;

  > * + * {
    margin-left: 8px;
  }

  .m-channelSocialLinks__link {
    display: inline-block;

    > a {
      font-size: 18px;
      @include m-theme() {
        color: themed($m-textColor--secondary) !important;
      }
    }
  }

  .m-custom-icon.m-custom-icon-minds:before {
    background-position-y: calc(50% - 0.1em);
  }
}

